-
Bug
-
Resolution: Done
-
P1: Critical
-
5.7.0, 5.12.3, 5.13.0, 5.14.1
-
4e8b3dd45ae4cc66a1b77cce901f80406b2a0f69 (qt/qtvirtualkeyboard/5.15)
-
Shovelling Snow
When the keyboard is shown for a text field in a popup window then it will not be usable. The keyboard appears fine, but it is grayed out so it is not possible to type with it even though the text field has focus.
You can workaround this by making the keyboard part of the popup.
- is duplicated by
-
QTBUG-59625 Virtual keyboard does not work with any edit of modal window
-
- Closed
-
- relates to
-
QTBUG-71909 Qt setWindowFlags WindowDoesNotAcceptFocus not working on Wayland
-
- Closed
-
-
QTBUG-69480 Qt Virtual Keyboard cannot be interacted with or opened a second time when using the wayland platform plugin
-
- Open
-
- resulted in
-
QTBUG-83217 rotation of virtualkeyboard does not work
-
- Closed
-
-
QTBUG-97075 [REG: 5.14.2->5.15.0] Anchors don't work with InputPanel anymore
-
- Closed
-
-
QTBUG-82619 The virtual keyboard is blocked by an application-modal dialog
-
- Closed
-