tests/manual/quickcontrols2/quickcontrols2.pro
@@ -1,0 +1,6 @@
+QT += qml quick
+SOURCES += main.cpp
+RESOURCES += main.qrc
+
+# Additional import path used to resolve QML modules in Qt Creator's code model
+QML_IMPORT_PATH =
